# Alexandria

./: .checkquality.config  .editorconfig  .gitignore  .jenkinsFile  .pre-commit-config.yaml  .travis.yml  Alexandria.dox  CMakeLists.txt  CPPLINT.cfg  ChangeLog.md  Makefile  README.md  build-rpm.sh  toolchain.cmake
AsciiTable/: CMakeLists.txt
AsciiTable/AsciiTable/: ColumnInfo.h  Row.h  Table.h
AsciiTable/src/lib/: ColumnInfo.cpp  Row.cpp  Table.cpp
AsciiTable/tests/src/: ColumnInfo_test.cpp  Row_test.cpp  Table_test.cpp
ChCatalog/: CMakeLists.txt
ChCatalog/ChCatalog/: Attribute.h  AttributeFromRow.h  AttributeFromTable.h  AttributeHandler.h  Catalog.h  CatalogFactory.h  CatalogFromTable.h  FilterName.h  Source.h
ChCatalog/ChCatalog/Enumerations/: SurveyNames.h
ChCatalog/ChCatalog/SourceAttributes/: Coordinates.h  Photometry.h  PhotometryAttributeFromRow.h  PhotometryAttributeFromTable.h  PhotometryAttributeHandler.h  SpectroscopicRedshift.h  SpectroscopicRedshiftAttributeFromRow.h
ChCatalog/ChCatalog/_impl/: Source.icpp
ChCatalog/doc/: ChCatalog.dox
ChCatalog/src/lib/: Catalog.cpp  CatalogFactory.cpp  CatalogFromTable.cpp  FilterName.cpp  Photometry.cpp  PhotometryAttributeFromRow.cpp  PhotometryAttributeFromTable.cpp  PhotometryAttributeHandler.cpp
ChCatalog/tests/src/: CatalogFactory_test.cpp  CatalogFixture.h  CatalogFromTable_test.cpp  Catalog_test.cpp  FilterName_test.cpp  PhotometryAttributeHandler_test.cpp  Source_test.cpp  TableFixture.h  TestMain.cpp
ChDataModel/: CMakeLists.txt
ChDataModel/ChDataModel/: Attribute.h  Catalog.h  Filter.h  FilterName.cpp  FilterName.h  FilterName_test.cpp  Photometry.h  Source.h  VectorPair.h
ChDataModel/ChDataModel/Enumerations/: CatalogTypes.h  CosmosPhotParNames.h  FilterTypes.h  SurveyNames.h
ChDataModel/ChDataModel/Fits/: Header.h  Image.h
ChDataModel/ChDataModel/Source/: Attribute.cpp  Attribute.h  Attribute_test.cpp  Source.h
ChDataModel/ChDataModel/SourceAttributes/: AttributeName.h  Coordinates.h  Photometry.h  PhotometryMap.h  SpectroscopicRedshift.h
ChDataModel/ChDataModel/_impl/: Source.icpp
ChDataModel/src/: Catalog.cpp  Photometry.cpp  Sed.cpp  VectorPair.cpp
ChDataModel/src/Fits/: Header.cpp  Keyword.cpp
ChDataModel/src/lib/: FilterName.cpp
ChDataModel/tests/src/: Attribute_test.cpp  Catalog_test.cpp  Coordinates_test.cpp  FilterName_test.cpp  Filter_test.cpp  Image_test.cpp  PhotometryMap_test.cpp  Photometry_test.cpp  Sed_test.cpp  Source_test.cpp  SpectroscopicRedshift_test.cpp  Survey_test.cpp  VectorPair_test.cpp
ChMatrix/: CMakeLists.txt
ChMatrix/ChMatrix/: AxisInfo.h  DataManagerTraits.h  Matrix.h  MatrixIndexHelper.h  serialize.h
ChMatrix/ChMatrix/_impl/: AxisInfo.icpp  DataManagerTraits.icpp  Matrix.icpp  MatrixConstructionHelper.h  MatrixIndexHelper.icpp  MatrixIterator.icpp  TemplateLoopCounter.h
ChMatrix/ChMatrix/serialization/: AxisInfo.h  Matrix.h  tuple.h
ChMatrix/doc/: ChMatrix.dox
ChMatrix/tests/src/: AxisInfo_test.cpp  DataManagerTraits_test.cpp  MatrixConstructionHelper_test.cpp  MatrixIndexHelper_test.cpp  Matrix_test.cpp  TestMain.cpp  serialize_test.cpp
ChTable/: CMakeLists.txt
ChTable/ChTable/: AsciiReader.h  AsciiWriter.h  ColumnInfo.h  FitsReader.h  FitsWriter.h  Row.h  Table.h
ChTable/doc/: ChTable.dox
ChTable/src/lib/: AsciiReader.cpp  AsciiReaderHelper.cpp  AsciiReaderHelper.h  AsciiWriter.cpp  AsciiWriterHelper.cpp  AsciiWriterHelper.h  ColumnInfo.cpp  FitsReader.cpp  FitsReaderHelper.cpp  FitsReaderHelper.h  FitsWriter.cpp  ReaderHelper.cpp  (+5 more)
Faros/: CMakeLists.txt
Faros/Faros/: Interpolation.h  InterpolationFactory.h  MagnitudeCalculation.h  Point.h
Faros/python/: magnitude_comparison.py
Faros/src/: MagnitudeCalculation.cpp
GridContainer/: CMakeLists.txt
GridContainer/GridContainer/: GridAxis.h  GridCellManagerTraits.h  GridCellManagerVectorOfVectors.h  GridContainer.h  GridContainerToTable.h  GridIndexHelper.h  serialize.h
GridContainer/doc/: GridContainer.dox  GridContainer.puml
MathUtils/: CMakeLists.txt
MathUtils/doc/: Functions.puml  MathUtils.dox
NdArray/: CMakeLists.txt
NdArray/NdArray/: Borrowed.h  NdArray.h  Operations.h
NdArray/doc/: NdArray.dox  NdArray.puml
NdArray/src/: NpyCommon.cpp  Operations.cpp
PCA/: CMakeLists.txt
PhzExecutables/: CMakeLists.txt
PhzExecutables/scripts/: ModelVideo
PhzModeling/: CMakeLists.txt
PhzModeling/PhzModeling/: ExtinctionFunctor.h  ModelCellManager.h  ModelDataManager.h  ModelDatasetGenerator.h  ModelDatasetGrid.h  ModelGrid.h  ModelMatrix.h  RedshiftFunctor.h
ProtoZ/: CMakeLists.txt
ProtoZ/ProtoZ/: FluxModeling.h  FluxToPdf.h  Interpolation.h  InterpolationFactory.h
ProtoZ/scripts/: ParallelPdf.py  PlotFilters.py  PlotSedOnFilters.py  pdfStats.py
Pyston/: CMakeLists.txt
Pyston/Pyston/: ExceptionRaiser.h  Exceptions.h  ExpressionTree.h  ExpressionTreeBuilder.h  GIL.h  Helpers.h  Module.h  NodeConverter.h  PythonExceptions.h  SharedContext.h  Table2Numpy.h
Pyston/auxdir/: example.py
Pyston/doc/: doc_module.rst
SourceCatalog/: CMakeLists.txt
SourceCatalog/SourceCatalog/: Attribute.h  AttributeFromRow.h  Catalog.h  CatalogFromTable.h  LuminosityParsingException.h  PhotometryParsingException.h  Source.h
SourceCatalog/doc/: ChCatalog.dox  SourceCatalog.dox  SourceCatalog.puml
Table/: CMakeLists.txt
Table/Table/: AsciiReader.h  AsciiReaderOld.h  AsciiWriter.h  AsciiWriterOld.h  CastVisitor.h  ColumnDescription.h  ColumnInfo.h  FitsReader.h  FitsReaderOld.h  FitsWriter.h  FitsWriterOld.h  Row.h  Table.h  TableReader.h  TableWriter.h  TestHelper.h
Table/doc/: Table.dox  Table.puml
XYDataSet/: CMakeLists.txt
XYDataSet/XYDataset/: XYDatasetIdentifierTraits.h  XYDatasetProvider.h
XYDataset/: CMakeLists.txt
XYDataset/XYDataset/: AsciiParser.h  CachedProvider.h  FileParser.h  FileSystemProvider.h  FitsParser.h  QualifiedName.h  StringFunctions.h  XYDataset.h  XYDatasetIdentifierTraits.h  XYDatasetProvider.h  serialize.h
XYDataset/doc/: XYDataset.dox  XYDataset.puml
trunk/ChDataHandling/: CMakeLists.txt
trunk/ChTools/: CMakeLists.txt
(+783 files in other folders)
